--- a/src/less/common/section-header.less
+++ b/src/less/common/section-header.less
@@ -24,6 +24,10 @@
 			height: 30px;
 		}
 	}
+	.material-icons {
+		vertical-align: middle;
+		margin-right: 5px;
+	}
 }
 
 #chabridge-menu {
@@ -62,6 +66,9 @@
 						&:hover {
 							background-color: #eaf8fe;
 						}
+					}
+					&.cloud-menu {
+						display: none;
 					}
 				}
 			}
