--- a/src/less/home.less
+++ b/src/less/home.less
@@ -204,6 +204,7 @@
 //企业愿景
 .section-vision {
   position: relative;
+  margin-bottom: -0.4rem;
   width: 100%;
   padding: .5rem 0;
   background: url('../static/imgs/home/fact-counter-bg.jpg') center center no-repeat;
@@ -229,6 +230,7 @@
 
 @media (max-width: @min-screen-width) {
   .section-vision {
+    margin-bottom: -0.2rem;
     .title {
       padding-left: 0;
       text-align: center;
