--- a/src/views/hardware.ejs
+++ b/src/views/hardware.ejs
@@ -26,7 +26,7 @@
                 <div class="list-item">
                     <a href="">
                         <img src="../static/imgs/hardware/<%= hardwarelistarr[i].img %>" />
-                        <div class="model"><span><%= hardwarelistarr[i].model %></span></div>
+                        <div class="name"><span><%= hardwarelistarr[i].model %></span></div>
                         <p><%= hardwarelistarr[i].name %></p>
                     </a>
                 </div>
