--- a/src/views/platform.ejs
+++ b/src/views/platform.ejs
@@ -3,10 +3,94 @@
 <head>
 	<!-- title -->
 	<%- include('./includes/title.ejs') %>
+	<link rel="stylesheet" href="../styles/platform.css"/>
 </head>
 <body>
 	<!--header-->
 	<%- include('./includes/header.ejs') %>
+	<!--banner-->
+	<div class="banner-wrap" style="background-image: url(../static/imgs/platform/banner.jpg)">
+		<div>
+				<h2>平台服务</h2>
+				<p>交通管理部门提供信息化监测和运维服务，打造统一的信息化综合管理平台，通过对监测传感数据的集合和分析，实现对桥梁道路、地下管廊、隧道地铁、高层建筑、深基坑等工程的统一信息化管理，为行业用户提供实时、便捷、高效的信息化解决方案，提供综合评定、智能分析和及时预报警等服务，起到提前发现隐患，提高安全系数，便捷用户管理，减少用户开支等作用。</p>
+		</div>
+	</div>
+	<div class="section-platform">
+		<div class="platform-box">
+			<div class="container">
+				<div class="inner-img-box left-inner-img-box">
+					<img src="holder.js/300x300" alt="">
+				</div>
+				<div class="inner-content-box-wraper right-inner-content-box">
+					<div class="content-title">实时监测</div>
+					<div class="content-line-box">
+						<div class="content-line-1"></div>
+						<div class="content-line-2"></div>
+					</div>
+					<div class="content-desc">
+						<p>7*24小时不间断监测，可灵活调整采集频率</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="platform-box">
+			<div class="container">
+				<div class="inner-img-box right-inner-img-box">
+						<img src="holder.js/300x300" alt="">
+				</div>
+				<div class="inner-content-box-wraper left-inner-content-box">
+					<div class="content-title">多渠道告警</div>
+					<div class="content-line-box">
+						<div class="content-line-1"></div>
+						<div class="content-line-2"></div>
+					</div>
+					<div class="content-desc">
+						<p>支持短信、微信、邮件三种告警渠道，用户可自由组合</p>
+						<p>支持多级别告警设置，满足不同告警程度需求</p>
+					</div>
+				</div>
+			</div>	
+		</div>
+
+		<div class="platform-box">
+			<div class="container">
+				<div class="inner-img-box left-inner-img-box">
+						<img src="holder.js/300x300" alt="">
+				</div>
+				<div class="inner-content-box-wraper right-inner-content-box">
+					<div class="content-title">灵活组网</div>
+					<div class="content-line-box">
+						<div class="content-line-1"></div>
+						<div class="content-line-2"></div>
+					</div>
+					<div class="content-desc">
+						<p>提供三种默认传感器组网策略</p>
+						<p>按客户需求定制传感器组网策略</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="platform-box">
+			<div class="container">
+				<div class="inner-img-box right-inner-img-box">
+						<img src="holder.js/300x300" alt="">
+				</div>
+				<div class="inner-content-box-wraper left-inner-content-box">
+					<div class="content-title">专业分析</div>
+					<div class="content-line-box">
+						<div class="content-line-1"></div>
+						<div class="content-line-2"></div>
+					</div>
+					<div class="content-desc">
+						<p>遵循行业监测标准，专业监测报告</p>
+					</div>
+				</div>
+			</div>	
+		</div>
+		
+	</div>
 	<!--footer-->
 	<%- include('./includes/footer.ejs') %>
 </body>
