--- a/src/views/solution.ejs
+++ b/src/views/solution.ejs
@@ -21,7 +21,7 @@
             <div class="list-item">
                 <a href="">
                     <img src="../static/imgs/solution/image001.jpg" />
-                    <div class="model"><span>桥梁健康监测平台</span></div>
+                    <div class="name"><span>桥梁健康监测平台</span></div>
                     <p>“桥好吧”以用户体验为中心，采用独特的底层架构设计，以项目配置操作、设备二维码操作、算法开发操作等指引</p>
                 </a>
             </div>
