--- a/src/less/common/common.less
+++ b/src/less/common/common.less
@@ -4,6 +4,8 @@
 @import "./fontsize-calc";
 @import "./section-header";
 @import "./banner-wrap";
+@import "./section-classes";
+@import "./section-news";
 @import "./section-footer";
 
 
