--- a/src/less/common/section-footer.less
+++ b/src/less/common/section-footer.less
@@ -1,6 +1,6 @@
 // footer 
 .section-footer {
-	margin-top: 60px;
+	// margin-top: 60px;
 	width: 100%;
 	color: white;
 	background: black;
@@ -34,7 +34,7 @@
 }
 @media screen and (max-width: @min-screen-width) {
 	.section-footer {
-		margin-top: 20px;
+		// margin-top: 20px;
 		.contact-info {
 			padding: 15px 0;
 			text-align: left;
