--- a/src/less/cb-form.less
+++ b/src/less/cb-form.less
@@ -24,7 +24,7 @@
       background-color: rgba(255, 255, 255, 0.3);
       input[type="text"],
       input[type="password"],
-      button[type="submit"]  {
+      button[type="submit"] {
         width: 100%;
         height: 45px;
         border: 1px solid @theme-color;
@@ -94,7 +94,7 @@
   }
 }
 
-@media (max-width: @min-screen-width) {
+@media (max-width: 992px) {
   .section-form {
     .form-box {
       margin: 0.3rem auto;
