--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -28,7 +28,11 @@
     </div>
 </div>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+<script src="../lib/jquery/dist/jquery.min.js"></script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+<script src="../lib/bootstrap/js/bootstrap.min.js"></script> 
 <script src="https://cdn.bootcss.com/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+<script src="../lib/waypoints/lib/jquery.waypoints.min.js"></script> 
 <script src="https://cdn.bootcss.com/holder/2.9.6/holder.min.js"></script>
+<script src="../lib/holder/holder.min.js"></script> 
 <script src="../js/common.js"></script> 
