--- a/src/views/includes/title.ejs
+++ b/src/views/includes/title.ejs
@@ -15,7 +15,10 @@
 <link rel="shortcut icon" href="../favicon.ico">
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css"/>
+<link rel="stylesheet" href="../lib/normalize.css/normalize.css">
 <link href="https://cdn.bootcss.com/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../lib/animate.css/animate.min.css">
 <link rel="stylesheet" href="../styles/general.css"/>
 
