”修改引用路径

--- a/src/views/cloud-register.ejs
+++ b/src/views/cloud-register.ejs
@@ -4,9 +4,9 @@
     <!-- title -->
     <%- include('./includes/title.ejs') %>
     <link href="https://cdn.bootcss.com/toastr.js/2.1.4/toastr.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../lib/toastr/toastr.min.css"/>
+    <link rel="stylesheet" href="../lib/toastr.min.css"/>
     <link href="https://cdn.bootcss.com/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../lib/bootstrapvalidator/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="../lib/bootstrapValidator.min.css">
     <link rel="stylesheet" href="../styles/cb-form.css"/>
 </head>
 <body>
@@ -74,11 +74,11 @@
 <!--footer-->
 <%- include('./includes/footer.ejs') %>
 <script src="https://cdn.bootcss.com/toastr.js/2.1.4/toastr.min.js"></script>
-<script src="../lib/toastr/toastr.min.js"></script> 
+<script src="../lib/toastr.min.js"></script> 
 <script src="https://cdn.bootcss.com/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery.bootstrapvalidator/0.5.3/js/language/zh_CN.min.js"></script>
-<script src="../lib/bootstrapvalidator/js/bootstrapValidator.min.js"></script>
-<script src="../lib/bootstrapvalidator/js/language/zh_CN.js"></script>
+<script src="../lib/bootstrapValidator.min.js"></script>
+<script src="../lib/zh_CN.js"></script>
 <script src="../js/cb-form.js"></script> 
 </body>
 </html>
