--- a/src/views/platform.ejs
+++ b/src/views/platform.ejs
@@ -81,7 +81,7 @@
 					<div class="content-title">专业分析</div>
 					<div class="content-line-box">
 						<div class="content-line-1"></div>
-						<div class="content-line-2"></div>
+						<div class="content-line-2"></div> 
 					</div>
 					<div class="content-desc">
 						<p>遵循行业监测标准，专业监测报告</p>
@@ -93,5 +93,7 @@
 	</div>
 	<!--footer-->
 	<%- include('./includes/footer.ejs') %>
+	<script src="https://cdn.bootcss.com/holder/2.9.6/holder.min.js"></script>
+	<script src="../lib/holder.min.js"></script> 
 </body>
 </html>
